# obs-motion-pngtuber-player

./: .gitignore  AGENTS.MD  CMakeLists.txt  README.JA.MD  README.md  install-to-obs.ps1  package-release.ps1  release-windows.ps1
.github/workflows/: build-release.yml  windows-ci.yml
ci/: build-nonwindows-stub.sh  build-nonwindows.sh  configure-obs-websocket.py  detect-obs-layout.py  generate-smoke-assets.py  install-obs.ps1  obs-websocket-smoke.py  resolve-ffmpeg.ps1
cmake/: generate_obs_import_lib.ps1
data/locale/: en-US.ini  ja-JP.ini
python/: lipsync_core.py  realtime_emotion_audio.py
python/runtime/: __init__.py  audio_input_service.py  device_identity.py  headless_runner.py  pyproject.player.toml  runtime_config.py  transport_control.py  transport_frame.py  worker_entry.py
src/: motionpngtuber-native.cpp  motionpngtuber-native.h  motionpngtuber-source.c  motionpngtuber-source.h  mpt-audio-backend.cpp  mpt-audio-backend.h  mpt-image-backend.cpp  mpt-image-backend.h  mpt-obs-module.h  mpt-obs-util.c  mpt-obs-util.h  mpt-text.cpp  mpt-text.h  mpt-video-backend.cpp  mpt-video-backend.h  plugin-main.c  plugin-support.c.in  plugin-support.h
tests/: generate-linux-validation-assets.py  mpt-linux-runtime-test.cpp  mpt-obs-plugin-load-test.cpp  mpt-video-backend-loop-test.cpp  mpt-video-backend-reader-test.cpp  obs_websocket_smoke_test.py
